[gd_scene load_steps=4 format=3 uid="uid://dohvqb6c1613p"]

[ext_resource type="Theme" uid="uid://blbl1uhbtj7qj" path="res://Resources/zude_tools_theme.tres" id="1_qpk3o"]
[ext_resource type="Script" path="res://Scenes/thumbnail.gd" id="2_7di5e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_50ba4"]

[node name="ThumbPanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(250, 150)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qpk3o")
script = ExtResource("2_7di5e")

[node name="ThumbMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ThumbVBoxContainer" type="VBoxContainer" parent="ThumbMarginContainer"]
layout_mode = 2

[node name="ThumbImage" type="TextureRect" parent="ThumbMarginContainer/ThumbVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
expand_mode = 5
stretch_mode = 5

[node name="ThumbTitle" type="Label" parent="ThumbMarginContainer/ThumbVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Title"
autowrap_mode = 3

[node name="ThumbButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_50ba4")
